# gloome-python

./: README.md  pyproject.toml
gloome/: __main__.py  config.py  consts.py  utils.py
gloome/data/initial_data/msa/: patternMSA0.fasta  patternMSA1.msa  patternMSA2.fasta
gloome/data/initial_data/tree/: newickTree0.nwk  newickTree1.tree  newickTree2.nwk
gloome/services/: design_functions.py  service_functions.py
gloome/tree/: node.py  npencoder.py  tree.py
