[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gloome"
version = "2.0.1"
description = "GLOOME: Gain Loss Mapping Engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name="Rodion Polonskyi", email="rodion@tauex.tau.ac.il" }, ]

dependencies = [
    "biopython>=1.85",
    "d3blocks>=1.4.11",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "numpy>=1.20,<2.0",
    "pandas>=2.0",
    "python-dotenv>=1.0.0",
    "scipy>=1.10"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"gloome" = ["data/**/*"]

[tool.setuptools]
include-package-data = true

[project.scripts]
gloome = "gloome.__main__:main"